# dggs-bench

./: README.md  pyproject.toml  run_final_benchmarks.sh  run_isea4h_catchup.sh  run_isea4h_rerun.sh  run_tsas_benchmarks.sh  run_xyz_catchup.sh  smoke_test_exp3.py
data/debug_isea3h/: metadata_exp_1_20260325_122529.json
data/test_roi/: metadata_roi_20260325_115033.json  relational_throughput_20260325_115033.csv
docs/: custom_experiments.md  custom_grids.md  isea3h_dglib_bridge.md  isea3h_vgrid_compilation.md
examples/: README.md  generate_paper_figures.py
src/data/fix_test/: metadata_exp_1_20260325_144502.json  metadata_exp_1_20260325_145855.json
src/dggs_benchmark/: __init__.py  cli.py
src/dggs_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dggs_benchmark/experiments/: __init__.py  computational_throughput.py  geometric_distortion.py  relational_throughput.py  topological_resilience.py
src/dggs_benchmark/grids/: __init__.py  a5_grid.py  base.py  geohash_grid.py  h3_grid.py  isea3h_grid.py  isea4h_grid.py  mercator_grid.py  qtm_grid.py  rhealpix_grid.py  s2_grid.py  utm_grid.py  xyz_tile_grid.py
src/dggs_benchmark/grids/dglib_bridge/: build.sh  build_isea4h.sh  isea3h_bridge.cpp  isea3h_native.py  isea4h_bridge.cpp  isea4h_native.py
tests/: test_angles.py  test_fix.py  test_fix2.py  test_h3.py  test_memory_oom.py
